--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apjs/dynamic": "^1.0.0",
+    "@emailjs/browser": "^3.6.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.3",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -17,8 +23,11 @@
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "autoprefixer": "^10.4.6",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
   }
 }
