--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
+    "@types/nodemailer": "^6.4.7",
     "firebase": "^9.17.1",
+    "googleapis": "^114.0.0",
     "next": "12.1.5",
+    "nodemailer": "^6.9.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1"
