--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "dependencies": {
     "@apjs/dynamic": "^1.0.0",
     "@emailjs/browser": "^3.6.2",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.3",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "@types/nodemailer": "^6.4.7",
-    "firebase": "^9.17.1",
+    "firebase": "^9.19.1",
     "googleapis": "^114.0.0",
-    "next": "12.1.5",
+    "next": "^13.3.0",
     "nodemailer": "^6.9.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
@@ -32,7 +32,7 @@
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "^3.3.1",
     "typescript": "4.6.4"
   }
 }
