--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@types/react-dom": "18.0.3",
     "autoprefixer": "^10.4.6",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
+    "eslint-config-next": "^13.3.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.3.1",
-    "typescript": "4.6.4"
+    "typescript": "^5.0.4"
   }
 }
