--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "@types/nodemailer": "^6.4.7",
+    "@vercel/analytics": "^0.1.11",
     "firebase": "^9.19.1",
     "googleapis": "^114.0.0",
     "next": "^13.3.0",
